--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="/src/imagens/logo com as letras IRB com tema em tecnologia em 3D.png" alt="Logo" class="logo">
+            <img src="./src/imagens/logo com as letras IRB com tema em tecnologia em 3D.png" alt="Logo" class="logo">
         </a>
     </header>
     <main class="personagens">
